--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,480 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
+body
+{
+  font-family: 'Rubik';
+  background-color: #FAF8EF;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.flex-container
+{
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.flex-container2
+{
+    display: flex;
+    min-height: 40vh;
+    flex-direction: row;
+}
+
+#blueCar
+{
+  width: 54.3vmin;
+  height: 25.4vmin;
+}
+
+#arrowBlue
+{
+  height: 11.9vmin;
+  width: 3.2vmin;
+}
+
+#arrowBlue {
+  -webkit-animation: mover 1s infinite  alternate;
+  animation: mover 0.5s infinite  alternate;
+}
+@-webkit-keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+
+#how video
+{
+  width: 80vmin;
+  height: 40vmin;
+}
+
+.howTitle
+{
+  font-weight: bold;
+}
+
+.howText
+{
+  text-align: justify;
+}
+
+.progressBar
+{
+  counter-reset: step;
+}
+
+.progressBar h4
+{
+  font-size: 4.5vmin !important;
+}
+
+.progressBar li
+{
+  list-style-type: none;
+  float: left;
+  width: 33.3%;
+  position: relative;
+  text-align: center;
+}
+
+.progressBar li:before
+{
+  content: counter(step);
+  counter-increment: step;
+  width: 6vmin;
+  height: 6vmin;
+  line-height: 6vmin;
+  border: 0.2vmin solid #C30606;
+  display: block;
+  text-align: center;
+  margin: 0 auto 1em auto;
+  border-radius: 50%;
+  background-color: #C30606;
+  color: #FAF8EF;
+}
+
+.progressBar li:after
+{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 0.2vmin;
+  background-color: #C30606;
+  top: 3vmin;
+  left: -50%;
+  z-index: -1;
+}
+
+.progressBar li:first-child:after
+{
+  content: none;
+}
+
+.home-title
+{
+  font-size: 4.5vmin;
+  font-weight: bolder;
+}
+
+.howIcon
+{
+  font-size: 15vmin;
+}
+
+.nav-link
+{
+  font-size: 2.5vmin;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+}
+
+.active
+{
+  border-bottom: 2px solid #C30606;
+}
+
+.nav-brand img
+{
+  width: 100%;
+  height: auto;
+}
+
+.logo
+{
+  width: 27.5vmin;
+  height: 4.5vmin;
+}
+
+.home-text
+{
+  font-size: 5vmin;
+}
+
+#driverIcon
+{
+  margin-left: 0.3vmin;
+}
+
+.searchInput svg {
+  position: absolute;
+  display: inline-block;
+  margin-left: 0.5vmin;
+}
+
+.searchInput {
+  margin-bottom: 0.1vmin;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.searchIcon
+{
+  position: relative;
+  padding: 0.1vmin;
+  font-size: 4vmin;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.input-field {
+  border-radius: 12px;
+  border: 2px solid #C30606;
+  background-color: #FAF8EF;
+  box-sizing: border-box;
+  font-size: 1.25em;
+  width: 100%;
+  padding-left: 5vmin;
+  height: 6vmin;
+  font-size: 2.2vmin;
+}
+
+.input-field2 {
+  border-radius: 12px;
+  border: 2px solid #C30606;
+  background-color: #FAF8EF;
+  box-sizing: border-box;
+  font-size: 1.25em;
+  width: 100%;
+  padding-left: 5vmin;
+  height: 6vmin;
+  font-size: 2.2vmin;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  background: none;
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+    -webkit-appearance: none;
+}
+
+#time-input1:before {
+  content: 'Départ à:';
+  margin-right: .6em;
+  color: #9d9d9d;
+}
+
+#time-input2:before {
+  content: 'Arivée avant:';
+  margin-right: .6em;
+  color: #9d9d9d;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 6.0vmin;
+  height: 3.9vmin;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #FAF8EF;
+  border: 1px solid black;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 2.6vmin;
+  width: 2.6vmin;
+  left: 0.4vmin;
+  bottom: 0.4vmin;
+  background-color: #FAF8EF;
+  border: 2px solid black;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: black;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px black;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(2.6vmin);
+  -ms-transform: translateX(2.6vmin);
+  transform: translateX(2.6vmin);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+::-webkit-input-placeholder {
+  font-style: italic;
+}
+:-moz-placeholder {
+  font-style: italic;  
+}
+::-moz-placeholder {
+  font-style: italic;  
+}
+:-ms-input-placeholder {  
+  font-style: italic; 
+}
+
+.redArrow
+{
+  width: 14.93vmin;
+  height: 2.64vmin;
+}
+
+footer
+{
+  border: 2px solid #C30606;
+  background-color: #D2D0C5;
+}
+
+.footer-title
+{
+  font-size: 3.5vmin;
+  letter-spacing: 0.5px;
+  font-weight: bolder;
+}
+
+.footer-text
+{
+  font-size: 3vmin;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+}
+
+.footer-icon
+{
+  font-size: 3.5vmin;
+  margin-left: 2%;
+}
+
+.footer-col
+{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.footer-link
+{
+  text-decoration: none;
+  color: black;
+}
+
+.footer-logo
+{
+  width: 24.83vmin;
+  height: 3.56vmin;
+}
+
+@media only screen and (max-width:768px) {
+  .nav-item
+  {
+    text-align: right !important;
+  }
+}
+
+@media only screen and (max-width:968px) {
+  #colToHide
+  {
+    display: none;
+  }
+
+  #colToMove
+  {
+    justify-content: center !important;
+  }
+
+  #colToMove a
+  {
+    padding-right: 0 !important;
+    margin-right: 0 !important;
+    margin-top: 1em !important;
+  }
+
+  .hRow
+  {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width:1096px) {
+  .footer-brand-row
+  {
+    flex-direction: column;
+  }
+
+  .col-one
+  {
+    display: block;
+    order: 1;
+    justify-content: center !important;
+  }
+
+  .col-two
+  {
+    display: block !important;
+    order: 2;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width:818px) {
+  .footer-row
+  {
+    flex-direction: column !important;
+  }
+
+  .footer-col
+  {
+    width: -moz-fiit-content;
+    width: fit-content;
+    padding-left: 1em !important;
+  }
+}
+
+@media only screen and (max-width:836px) {
+  .progressBar li
+  {
+    float: none;
+    width: 100%;
+    margin-top: 2em;
+  }
+
+  .progressBar li:after
+  {
+    display: none;
+  }
+}
+
+@media only screen and (max-width:1236px) {
+
+  .leftRighSearchRow, .middleSearchRow
+  {
+    flex-direction: column;
+  }
+
+  .middleSearchRow
+  {
+    width: 100%;
+  }
+
+  .leftRighSearchRow div
+  {
+    margin-bottom: 1em;
+  }
+
+  .middleSearchCol
+  {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width:516px) {
+  .topSearchRow
+  {
+    flex-direction: column;
+  }
+
+  .middleSearchCol
+  {
+    display: block;
+    margin-bottom: 1em;
+  }
+
+  .searchInput
+  {
+    padding-right: 0;
+  }
+
+  .middleSearchRow
+  {
+    width: auto;
+  }
 }
